# SG_proj_011

./: .coverage  .coverage 2  README.md  benchmark_report.md  development_log.txt  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
sg_proj_011.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: main.py  model.py  schemas.py
tests/: test_main.py  test_model.py
