[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sg-proj-011"
version = "0.1.0"
description = "Processability Level Determination Module"
authors = [{name = "Hyunchan An"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]
