[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "sg-proj-011"
version = "0.1.0"
description = "Processability Level Determination Module"
authors = [{name = "Hyunchan An"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "httpx",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
strict = false
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.setuptools]
packages = ["src"]
